
Fri Jan 19 06:16:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/faq-cross.html: Add pointers to the crossgcc mail list.

Thu Jan 18 17:41:52 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* lists.shtml: Add all mingw-users mailing list.

Thu Jan 18 16:18:53 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* docs.shtml: Remove Laura as the specific FAQ maintainer.
	Remove the dead link to Laura's home page.
	* mingw-oldfaq.shtml: Rename the current FAQ.
	* mingwfaq.shtml: New contents.
	* ssi/faq-idx.html: New file.
	* ssi/faq-cross.html: ditto.
	* ssi/faq-license.html: ditto.
	* ssi/faq-oldfaq.html: ditto.
	* ssi/faq-runtime.html: ditto.
	* ssi/faq-version.html: ditto.
	* ssi/faq-w32api.html: ditto.
	* ssi/faq-what.html: ditto.

Thu Jan 18 15:31:24 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* who.shtml: Mumit is now active member again, yea!
	However, Laura Michaels isn't. :(

Tue Jan  2 13:11:24 PST 2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/footer.html: Correct the matching of starting and ending tags.

Wed Dec 27 12:06:43 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingwfaq.shtml: Add a name reference to each item of the index.
	Add a href at the end of each section to go back to the index.  
	Add header tags (h#) to highlight the sections of the FAQ.

Tue Dec 26 13:39:25 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/lsidebar.html: Revert previous change
	* ssi/bottombar.html: ditto
	* who.shtml: Instruct user to SF memberlist.php

2000-12-22  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Added link to faq.shtml

        * faq.shtml: Barf out installation instructions.

        * lsidebar.shtml, bottombar.shtml: Point "Who are we" link to
        SF project members page.

Fri Dec 22 07:23:46 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* docs.shtml: bugfix ssi include comment tag.
