@@ -5,16 +5,31 @@
      MinGW is an acronym for "Minimalist GNU for Windows".  The name was coined
      by Colin Peters who created headers and import definitions for Microsoft's
      crtdll C runtime in an effort to remove the dependancy of the Cygwin1.dll
-     from applications built by Cygwin's GCC.  Colin maintains a website about
-     MinGW at <a href="http://www.geocities.com/Tokyo/Towers/6162/gcc.html" target="_nw">
+     from applications built by Cygwin's GCC.  It is that set of files that
+     constitute what MinGW is and is interchangeably refered to as the MinGW 
+     runtime.  Colin maintains a website about MinGW at 
+     <a href="http://www.geocities.com/Tokyo/Towers/6162/gcc.html" target="_nw">
      http://www.geocities.com/Tokyo/Towers/6162/gcc.html</a> which lists some
      interesting details you won't find here.  Other history details can be
-     found by <a href="history.shtml">clicking here</a>.
+     found on our <a href="history.shtml">history</a> page.
+  </p>
+  <p>
+     The MinGW runtime was eventually used to create a port of GCC and binutils
+     to the Win32 platform and to create native binaries for it.  These ports
+     have commonly been mistaken for MinGW itself.  In reality these ports are
+     just using MinGW.  The MinGW team will continue to port these utilities
+     as new releases of the utilities are created.  It is our hope that the
+     source code base for these utilities incorporate our work so that we don't
+     have to continually apply our patches.  And many such patches have
+     already been applied as can be evidenced by the ChangeLog of the source
+     packages.
   </p>
   <p>
      Today MinGW is a project of <a href="http://sourceforge.net/projects/mingw/">SourceForge.net</a>.
-     We have a few developers working on their spare time with no corporate
+     We have a few developers working in their spare time with no corporate
      funding in the project.  If you would like to volunteer please let us know
      via email to the <a href="mailto:mingw-users@sourceforge.net">MinGW mail list</a>
   </p>
   <p><a href="#i-what">Back to index</a></p>
+
+<!--$Id: faq-what.html,v 1.2 2001-01-19 21:41:40 earnie Exp $-->
